<?xml version="1.0" encoding="utf-8"?><!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="msc_app_id">53561e75</string>
    <string name="app_name">LEHome</string>
    <string name="app_service_running">服务正在运行</string>
    <string name="title_section1">控制</string>
    <string name="title_section2">收藏</string>
    <string name="title_section3">定位器</string>
    <string name="title_section4">运行情况</string>
    <string name="title_section5">留言</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="voice_input">语音脚本</string>
    <string name="double_back_to_quit">再次点击退出程序</string>
    <string name="action_settings">设置</string>
    <string name="com_comfirm">确定</string>
    <string name="com_cancel">取消</string>
    <string name="com_exec">执行</string>
    <string name="com_resend">再次发送</string>
    <string name="com_send_to_edittext">发送到输入框</string>
    <string name="welcome">welcome!</string>
    <string name="pref_sub_only">只收听当前用户</string>
    <string name="pref_sub_only_summ">取消后显示所有信息</string>
    <string name="pref_user_profile">连接</string>
    <string name="pref_bind_device">设备号</string>
    <string name="pref_server_address">服务器地址</string>
    <string name="pref_message_profile">消息</string>
    <string name="pref_auto_add_begin_and_end">自动补全命令</string>
    <string name="pref_message_begin">命令头</string>
    <string name="pref_message_end">命令尾</string>
    <string name="pref_speech_cmd_need_confirm">语音命令后弹出确认窗口</string>
    <string name="pref_cmd_need_correct">模糊命令</string>
    <string name="pref_homescreen_shortcut">添加到homescreen</string>
    <string name="pref_auto_connect_sco">使用蓝牙耳机</string>
    <string name="pref_others_profile">其他功能</string>
    <string name="pref_homescreen_shortcut_smy">在homescreen添加快捷方式</string>
    <string name="pref_clean_cmd_history">清空输入历史</string>
    <string name="pref_load_auto_item">下载自动补全数据</string>
    <string name="speech_cmd_need_confirm">确认发送语音命令</string>
    <string name="qs_default_input">开灯</string>
    <string name="add_shortcut_item_summ">键入命令</string>
    <string name="add_chat_item_to_shortcut">添加到收藏</string>
    <string name="delete_shortcut_item">删除</string>
    <string name="copy_item">复制消息</string>
    <string name="copy_to_input">复制到输入框</string>
    <string name="edittext_hint">输入命令</string>
    <string name="title_activity_settings">设置</string>
    <string name="pref_local_ip_item">显示本机ip</string>
    <string name="action_exit">退出</string>
    <string name="add_shortcut_item">添加</string>
    <string name="copy_shortcut_item">复制</string>
    <string name="button_speech">按住说话</string>
    <string name="button_clear">清空</string>
    <string name="msc_login_faild">讯飞语音云登陆失败</string>
    <string name="chat_error_json">json解析错误</string>
    <string name="chat_error_http_error">服务器无法链接</string>
    <string name="chat_error_protocol_error">HTTP协议不支持</string>
    <string name="chat_error_conn">连接被断开</string>
    <string name="speech_start_faild">语音引擎初始化失败</string>
    <string name="speech_release_cancel">松开取消</string>
    <string name="speech_too_short">说话时间太短</string>
    <string name="speech_error">语音识别失败</string>
    <string name="speech_no_result">无识别结果</string>
    <string name="speech_speaking">请说话</string>
    <string name="speech_initializing">正在初始化</string>
    <string name="speech_processing">正在识别</string>
    <string name="msg_no_deviceid">尚未绑定设备号</string>
    <string name="msg_device_binded">已绑定设备</string>
    <string name="msg_push_binded">已连接推送服务器</string>
    <string name="msg_device_bind_faild">绑定设备失败</string>
    <string name="msg_push_msg_format_error">推送消息格式出错</string>
    <string name="noti_new_msg">新消息</string>
    <string name="noti_num_new_msg">[%1$s条新消息] </string>
    <string name="noti_bref_msg">%1$s&#8230;[点击查看]</string>
    <string name="title_activity_wakeup">WakeupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_loading_auto_item">正在下载自动补全数据...</string>
    <string name="pref_load_auto_item_success">自动补全数据下载完成</string>
    <string name="pref_load_auto_item_faild">自动补全数据下载失败</string>
    <string name="pref_network_profile">网络</string>
    <string name="save_local_history_success">输入历史保存完成</string>
    <string name="save_local_history_error">保存输入历史出错</string>
    <string name="button_extend_tool">+</string>
    <string name="menu_tool_time">时间</string>
    <string name="menu_tool_date">日期</string>
    <string name="menu_tool_favor">收藏</string>
    <string name="menu_tool_favor_title">添加收藏</string>
    <string name="menu_tool_favor_empty">无收藏</string>
    <string name="pref_local_ssid">本地wifi ssid</string>
    <string name="error_stop_local_msg_service">本地消息服务退出失败</string>
    <string name="error_bind_local_msg_service">绑定本地消息服务失败</string>
    <string name="error_unbind_local_msg_service">解除本地消息绑定失败</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_internal">内部错误</string>
    <string name="pref_enable_local_msg">自动切换本地消息服务</string>
    <string name="pref_local_msg_server_address">本地消息服务器地址</string>
    <string name="msg_local_saddress_not_set">本地消息服务器地址未设置</string>
    <string name="msg_saddress_not_set">服务器地址未设置</string>
    <string name="msg_local_binding">切换至本地消息服务器</string>
    <string name="error_local_msg_service">本地消息服务器通讯失败</string>
    <string name="pref_local_msg_subscribe_address">本地消息订阅地址</string>
    <string name="title_local_msg_mode">本地模式</string>
    <string name="error_empty_local_server_adress">没有设置本地消息服务器地址</string>
    <string name="error_connect_local_server">连接本地消息服务器失败</string>
    <string name="pref_volume_key_control_speech">使用音量键唤起语音识别</string>
    <string name="pref_sum_volume_key_control_speech">双击音量键即可进行语音输入</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_my_tag_power_title">电量</string>
    <string name="refresh_tag_list">重新选择</string>
    <string name="dialog_cancel">取消</string>
    <string name="find_my_tag_select_beacon">选择测量目标</string>
    <string name="find_my_tag_bt_turning_on">正在打开蓝牙</string>
    <string name="find_my_tag_bt_off">蓝牙已关闭</string>
    <string name="save_capture_to_sdcard">保存图片</string>
    <string name="noti_bref_new_capture">图片消息，点击查看</string>
    <string name="toast_saving_capture">正在保存</string>
    <string name="toast_saving_capture_success">已保存</string>
    <string name="toast_saving_capture_faild">保存失败</string>
    <string name="title_activity_photo_viewer">图片</string>
    <string name="qs_run_favor">直接执行</string>
    <string name="qs_run_quote">[%1$s]</string>
    <string name="pref_client_id">我的名字</string>
    <string name="loc_current_addr">%1$s现在位于:%2$s</string>
    <string name="loc_no_addr">%1$s不知道在哪里...</string>
    <string name="loc_sending_loc">定位成功，正在发送位置到服务器...</string>
    <string name="loc_send_error">上传地址失败</string>
    <string name="action_open_in_other_app">用其他应用打开</string>
    <string name="loc_open_in_browser">在浏览器中打开</string>
    <string name="toast_no_such_app">没有安装该应用程序</string>
    <string name="loc_copy_location">复制地址</string>
    <string name="msg_copyed_to_clipboard">已复制到剪切板</string>
    <string name="pref_save_power_mode">省电模式</string>
    <string name="pref_save_power_mode_sum">省电模式下，消息到达率可能会有所下降</string>
    <string name="pref_save_power_mode_set">退出应用后生效</string>
    <string name="long_msg_http_exception">获取数据失败</string>
    <string name="long_msg_parse_exception">数据解析失败</string>
    <string name="chat_new_message">%1$s条新消息</string>
    <string name="pref_load_img_wifi">wifi环境下自动载入图片</string>
    <string name="pref_load_img_wifi_sum">非wifi环境下需点击载入图片</string>
    <string name="pref_auto_connect_sco_sum">手机连接蓝牙耳机时，通过蓝牙耳机进行语音输入</string>
    <string name="pref_nfc_cmd_enable">开启NFC</string>
    <string name="pref_sum_nfc_cmd_enable">运行存储在NFC芯片上的命令。需要系统支持并开启NFC功能</string>
    <string name="pref_loc_me_enable">启用定位功能</string>
    <string name="pref_loc_me_enable_sum">开启后其他用户可定位本机</string>
    <string name="chat_error_no_connection_error">网络连接断开</string>
    <string name="nav_category_others">其他</string>
    <string name="nav_item_settings">设置</string>
    <string name="nav_item_exit">退出</string>
    <string name="nav_item_control">控制</string>
    <string name="nav_item_favour">收藏</string>
    <string name="nav_item_locator">定位器</string>
    <string name="nav_item_camera">摄像头</string>
    <string name="nav_category_functions">功能</string>
    <string name="title_remote_msg_mode">远程模式</string>
    <string name="pref_loc_me_silent_enable">静默定位</string>
    <string name="pref_loc_me_silent_enable_sum">当别人定位自己时，不显示通知</string>
    <string name="nav_item_message">留言</string>
    <string name="message_release_to_send">松开发送</string>
    <string name="message_press_to_speak">按住说话</string>
    <string name="message_release_to_cancel">松开取消</string>
    <string name="options_clean_up">清空</string>
    <string name="message_sending">正在发送,点击取消</string>
    <string name="message_sending_success">发送留言成功</string>
    <string name="message_sending_fail">发送留言失败</string>
    <string name="toast_nfc_feature_disable">本设备不支持NFC或NFC未打开</string>
    <string name="foreground_local_msg_service_title">LEHome本地消息服务</string>
    <string name="foreground_local_msg_service_message">正在运行…</string>
    <string name="foreground_local_msg_service_ticker">本地消息服务开启</string>
    <string name="write_to_nfc_item">写入到NFC标签</string>
    <string name="nfc_detecting_tag">靠近一个标签</string>
    <string name="nfc_write_fail">写入失败</string>
    <string name="nfc_write_success">写入成功</string>
    <string name="nfc_writing">正在写入</string>
    <string name="nfc_detecting">正在检测</string>
    <string name="nfc_close_dialog">关闭</string>
    <string name="nfc_empty_content">无写入内容</string>
    <string name="pref_cmd_autocomplete">自动补全</string>
    <string name="pref_cmd_autocomplete_set">重启应用生效</string>
    <string name="pref_delete_autocomplete_history">删除输入历史</string>
    <string name="pref_delete_autocomplete_history_toast">已清空输入历史</string>
    <string name="title_section6">地理围栏</string>
    <string name="nav_item_geo_fencing">地理围栏</string>
    <string name="msg_device_unbinded">解绑成功</string>
    <string name="msg_device_unbind_faild">解绑失败</string>
    <string name="action_show_location">显示经纬度</string>

    <string name="title_activity_location">地图</string>
    <string name="location_action_button">打开百度地图</string>
</resources>
