<?xml version="1.0" encoding="utf-8"?><!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_user_profile">
        <EditTextPreference
            android:title="@string/pref_client_id"
            android:defaultValue=""
            android:key="pref_client_id" />
        <EditTextPreference
            android:title="@string/pref_bind_device"
            android:defaultValue=""
            android:key="pref_bind_device" />
        <EditTextPreference
            android:title="@string/pref_server_address"
            android:defaultValue=""
            android:key="pref_server_address" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_message_profile">
        <CheckBoxPreference
            android:key="pref_cmd_autocomplete"
            android:title="@string/pref_cmd_autocomplete"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_cmd_need_correct"
            android:title="@string/pref_cmd_need_correct"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_speech_cmd_need_confirm"
            android:title="@string/pref_speech_cmd_need_confirm"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_auto_add_begin_and_end"
            android:title="@string/pref_auto_add_begin_and_end"
            android:defaultValue="false" />
        <EditTextPreference
            android:title="@string/pref_message_begin"
            android:key="pref_message_begin"
            android:enabled="false" />
        <EditTextPreference
            android:title="@string/pref_message_end"
            android:key="pref_message_end"
            android:enabled="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_network_profile">
        <Preference
            android:title="@string/pref_load_auto_item"
            android:key="load_auto_item" />
        <Preference
            android:title="@string/pref_local_ip_item"
            android:key="local_ip_item" />
        <CheckBoxPreference
            android:key="pref_enable_local_msg"
            android:title="@string/pref_enable_local_msg"
            android:defaultValue="false" />
        <EditTextPreference
            android:title="@string/pref_local_ssid"
            android:defaultValue=""
            android:key="pref_local_ssid" />
        <EditTextPreference
            android:title="@string/pref_local_msg_server_address"
            android:defaultValue=""
            android:key="pref_local_msg_server_address" />
        <EditTextPreference
            android:title="@string/pref_local_msg_subscribe_address"
            android:defaultValue=""
            android:key="pref_local_msg_subscribe_address" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_others_profile">
        <Preference
            android:title="@string/pref_delete_autocomplete_history"
            android:key="pref_delete_autocomplete_history"/>
        <CheckBoxPreference
            android:key="pref_loc_me_enable"
            android:title="@string/pref_loc_me_enable"
            android:summary="@string/pref_loc_me_enable_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_loc_me_silent_enable"
            android:title="@string/pref_loc_me_silent_enable"
            android:summary="@string/pref_loc_me_silent_enable_sum"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_load_img_wifi"
            android:title="@string/pref_load_img_wifi"
            android:summary="@string/pref_load_img_wifi_sum"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_save_power_mode"
            android:title="@string/pref_save_power_mode"
            android:summary="@string/pref_save_power_mode_sum"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_auto_connect_sco"
            android:title="@string/pref_auto_connect_sco"
            android:summary="@string/pref_auto_connect_sco_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_volume_key_control_speech"
            android:title="@string/pref_volume_key_control_speech"
            android:summary="@string/pref_sum_volume_key_control_speech"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_nfc_cmd_enable"
            android:title="@string/pref_nfc_cmd_enable"
            android:summary="@string/pref_sum_nfc_cmd_enable"
            android:defaultValue="true" />
        <!--<Preference-->
        <!--android:title="@string/pref_homescreen_shortcut"-->
        <!--android:key="homescreen_shortcut" />-->
        <!--<Preference-->
        <!--android:title="@string/pref_clean_cmd_history"-->
        <!--android:key="clean_cmd_history" />-->
    </PreferenceCategory>
</PreferenceScreen>
